# ImgSegQtDemo

./: .gitignore  CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  MainWindow_ui.h  README.md  main.cpp  predictor.cpp  predictor.h  prepare.sh
